@startuml
hide circle
hide empty members


class "Server" as sqs

class "ProjectManager" as sqpm{
	ProjectList
	CreateProject(Name)
	OpenProject(Name)
	DeleteProject(Name)
	UpdateProject(ProjectUpdateInfo)
	}

class "Project" as sqp

class "ProjectUpdateInfo" as sqpui


sqs *-- sqpm : 1

sqpm - sqpui : <<Argument>>


sqpm *-- sqp : 0..*





@enduml